@@ -1,5 +1,16 @@
 2009-03-31  Eric Carlson  <eric.carlson@apple.com>
 
+        Reviewed by Simon Fraser.
+
+        https://bugs.webkit.org/show_bug.cgi?id=24965
+        Bug 24965: HTMLMediaElement: network state changes can be missed
+        
+        * html/HTMLMediaElement.cpp:
+        (WebCore::HTMLMediaElement::setNetworkState): Always update m_networkState when the
+        state changes, even when no event needs to be fired.
+
+2009-03-31  Eric Carlson  <eric.carlson@apple.com>
+
         Reviewed by Darin Adler.
         
         https://bugs.webkit.org/show_bug.cgi?id=24964
